把宽度检查 760 改成了 0

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -9,12 +9,12 @@
     <meta name="google-site-verification" content="BstJA3X9z6f9HcvoN9AZTwaKo_9Abj_j7dVBPfy640s" />
     <meta name="baidu-site-verification" content="IYCrtVH0i1" />
     <meta property="wb:webmaster" content="239d3d1dbdde1b2c" />
-    <link rel="shortcut icon" href="__PUBLIC__/Home/images/favicon.ico" type="image/x-icon" />
+
 
     <link rel="icon" type="image/png" href="__PUBLIC__/Home/images/favicon.ico" />
     <script type="text/javascript">(function(document, screen) {
-        if (screen.width < 760) {
-          document.location.href = "/mobile/";
+        if (screen.width < 0) {
+          document.location.href = "555";
         }
       } (document, screen));</script>
     <link rel="stylesheet" href="__PUBLIC__/Home/css/common.css?v=2015-5-20" />
