添加新功能了

--- a/Application/Home/View/Common/index_header.html
+++ b/Application/Home/View/Common/index_header.html
@@ -10,7 +10,7 @@
         <if condition="$user_phone">
 
                             <li class="userName">
-                                <a href="member_index.html" rel="nofollow" draw-user>{$user_phone}<em></em></a>
+                                <a href="{:U('Home/User/index')}" rel="nofollow" draw-user>{$user_phone}<em></em></a>
                                 <div>
                                     <p><a href="{:U('Home/User/index')}"  rel="nofollow">账号管理</a></p>
                                     <p><a href="{:U('Home/User/user_addr')}"  rel="nofollow">地址管理</a></p>
