--- a/Application/Home/View/User/user_addr.html
+++ b/Application/Home/View/User/user_addr.html
@@ -131,7 +131,7 @@
             </volist>
 
 
-            <div style="clear:both;"></div>
+            <div class="addaf"  style="clear:both;"></div>
         </ul>
         <br>
         <button class="pay-xdz-btn">使用新地址</button>
