--- a/Application/Admin/View/Product/product_add_cp.html
+++ b/Application/Admin/View/Product/product_add_cp.html
@@ -62,7 +62,7 @@
 			<label class="form-label col-xs-4 col-sm-2">图片上传：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<div class="uploader-list-container">
-					<input type="file" name="photo" class="input-text radius">
+					<input type="file" id="photo" name="photo" class="input-text radius">
 				</div>
 			</div>
 		</div>
