完整版 -- 简单基础

--- a/Application/Admin/View/Admin/index.html
+++ b/Application/Admin/View/Admin/index.html
@@ -50,9 +50,8 @@
 			<dt><i class="Hui-iconfont">&#xe620;</i> 订单管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="{:U('/Admin/Order/index')}" data-title="品牌管理" href="javascript:void(0)">订单管理</a></li>
-					<li><a data-href="product-category.html" data-title="分类管理" href="javascript:void(0)">订单配送</a></li>
-					<li><a data-href="{:U('/Admin/Product/index')}" data-title="产品管理" href="javascript:void(0)">订单完成</a></li>
+					<li><a data-href="{:U('/Admin/Order/index')}" data-title="送餐管理" href="javascript:void(0)">送餐管理</a></li>
+					<li><a data-href="{:U('/Admin/Order/Ordered')}" data-title="订单完成" href="javascript:void(0)">订单完成</a></li>
 				</ul>
 			</dd>
 		</dl>
@@ -68,7 +67,7 @@
 			<dt><i class="Hui-iconfont">&#xe60d;</i> 会员管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="member_list" data-title="会员列表" href="javascript:;">会员列表</a></li>
+					<li><a data-href="{:U('/Admin/User/index')}" data-title="会员列表" href="javascript:;">会员列表</a></li>
 				</ul>
 			</dd>
 		</dl>
