--- a/Application/Admin/View/Order/ordered.html
+++ b/Application/Admin/View/Order/ordered.html
@@ -55,24 +55,14 @@
 						<td><span class="price">{$vo.total}</span> 元</td>
 						<td class="text-2"><a class="ml-5" onClick="order_show('订单 {$vo.id} 详情','__URL__/order_show',{$vo.id})" href="javascript:;" title="订单详情">订单详情</a></td>
 						<td class="td-status">
-							<if condition="$vo['or_state'] eq 1">
-									<span class="label label-success radius">已点击送餐</span>
-								<elseif condition="$vo['or_state'] eq 0"/>
-									<span class="label label-defaunt radius">快点送餐吧！</span>
+							<if condition="$vo['or_de'] eq 1">
+									<span id="$vo['or_de']" class="label label-error radius">用户已删除</span>
 								<else/>
-									<span class="label label-success radius">已签收</span>
+								<span class="label label-success radius">已签收</span>
 							</if>
 						</td>
 						<td class="td-manage">
-							<if condition="$vo['or_state'] eq 1">
-									<a style="text-decoration:none" onClick="order_stop(this,{$vo.id})" href="javascript:;" title="取消送餐"><i class="Hui-iconfont">&#xe6de;</i></a>
-								<elseif condition="$vo['or_state'] eq 0"/>
-									<a style="text-decoration:none" onClick="order_start(this,{$vo.id})" href="javascript:;" title="点击送餐"><i class="Hui-iconfont">&#xe603;</i></a>
-								<else/>
 									<span class="label label-success radius">已签收</span>
-							</if>
-
-
 							<a style="text-decoration:none" class="ml-5" onClick="order_del(this,{$vo.id})" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 					</tr>
 					</volist>
@@ -215,6 +205,7 @@ function order_del(obj,id){
 				}else{
 					layer.msg(r.msg,{icon:1,time:1000});
 				}
+
 			},
 			error:function(r) {
 				console.log(r.msg);
